Fixed ordering for table group views

--- a/grid/templates/group-by.html
+++ b/grid/templates/group-by.html
@@ -194,7 +194,11 @@
             </td>
           {% else %}
             <td class="{{ column }}">
-                {{ value|join:', '|default_if_none:'Unknown' }}
+              {% if value %}
+                {{ value|join:', '|intcomma }}
+              {% else %}
+                {% trans "Unknown" %}
+              {% endif %}
             </td>
           {% endif %}
         {% endfor %}
