--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -6,6 +6,7 @@
 {#     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script> #}
     <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "gis/js/OLMapWidget.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 {% block page_title %}{% trans "Add a deal" %}{% endblock %}
