--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="{% url 'editor' %}">{% trans "Dashboard" %}</a></li>
                                     <li><a href="{% url 'manage' %}">{% trans "Manage" %}</a></li>
+                                    <li><a href="{% url 'add_deal' %}">{% trans "Add a deal" %}</a></li>
                                     <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
                                 </ul>
                             </li>
