--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -24,7 +24,7 @@
 {% if activity.fk_status_id == 1 %}
 <p class="alert alert-warning">{% trans "This deal version is pending, please accept or reject it in the manage section." %}</p>
 {% else %}{% if activity.fk_status_id == 4 %}
-<p class="alert alert-warning">{% trans "This deal has been deleted." %}</p>
+<p class="alert alert-warning">{% trans "This deal has been deleted. It is not visible for public users." %}</p>
 {% endif %}{% endif %}
 {% endblock %}
 
